Fix alignment and question page

--- a/core/static/styles.css
+++ b/core/static/styles.css
@@ -219,7 +219,7 @@ body {
 
 .section{
     display: block;
-    text-align: center;
+    margin-left: 20px;
     padding: 30px 0px;
 }
 
